# openpose_ros

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  package.xml
launch/: openpose_ros.launch  openpose_ros_pepper.launch
msg/: BodyPartDetection.msg  PersonDetection.msg
openpose_ros/: CMakeLists.txt  package.xml
openpose_ros/launch/: openpose_ros.launch  openpose_ros_pepper.launch  openpose_ros_pepper_small.launch
openpose_ros/src/: detect_people_server.cpp  topic2.hpp
openpose_ros_msgs/: .package.xml.swp  CMakeLists.txt  package.xml
openpose_ros_msgs/action/: GetCrowdAttributesWithPose.action
openpose_ros_msgs/msg/: BodyPartDetection.msg  Gesture.msg  PersonAttributes.msg  PersonAttributesWithPose.msg  PersonDetection.msg  Posture.msg
openpose_ros_msgs/srv/: DetectPeople.srv  GetCrowdAttributes.srv  GetCrowdAttributesWithPose.srv  GetFollowRoi.srv  GetPersonAttributes.srv  GetShirtRoi.srv
src/: detect_people_server.cpp
