<package>
   <name>openpose_ros_msgs</name>
   <version>0.0.6</version>
   <description>
      This package defines messages used in openpose ros wrapper.
   </description>
   <author>Johannes Kummert</author>
   <maintainer email="jkummert@techfak.uni-bielefeld.de">Johannes Kummert</maintainer>

   <license>TODO</license>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>gender_and_age_msgs</build_depend>

   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>gender_and_age_msgs</run_depend>


</package>
